tests/cases/pass/unary_ops.cs
class Program { static void Main() { Console.WriteLine(-5); Console.WriteLine(!false); } }
