tests/cases/fail/rethrow_without_active_exception.cs
class Program {
    static void Main() {
        throw;
    }
}
